appId: com.benjaminwatts.edfcrypto
---
- launchApp:
    stopApp: true
- tapOn:
    id: "favourites-tab-icon"
- tapOn:
    id: "clear-favourites-icon"
- tapOn: #  reset to main screen
    id: "home-tab-icon"
- tapOn:
    id: "search-icon"
- tapOn: "Enter coin name"
- inputText: "bitcoin"
- hideKeyboard
- tapOn:
    id: "search-result-0"
- tapOn: #  # favourite it
    id: "favourite-icon"
- tapOn: # back to search
    id: 'back-icon'
- tapOn: # back to main screen
    id: 'back-icon'
- tapOn: "Favourites"
- tapOn:
    id: "favourite-result-0"
- tapOn: # unfavourite it
    id: "favourite-icon"
- tapOn:
    id: 'back-icon'
